[#508][Fix] 신고조회 페이징 수정