@@ -1,13 +1,12 @@
 package com.runninghi.runninghibackv2.application.service;
 
-import com.runninghi.runninghibackv2.application.dto.postreport.response.DeletePostReportResponse;
+import com.querydsl.jpa.impl.JPAQueryFactory;
+import com.runninghi.runninghibackv2.application.dto.postreport.response.*;
+import com.runninghi.runninghibackv2.domain.entity.Image;
 import com.runninghi.runninghibackv2.domain.enumtype.ProcessingStatus;
 import com.runninghi.runninghibackv2.domain.entity.Member;
 import com.runninghi.runninghibackv2.domain.entity.Post;
 import com.runninghi.runninghibackv2.application.dto.postreport.request.CreatePostReportRequest;
-import com.runninghi.runninghibackv2.application.dto.postreport.response.CreatePostReportResponse;
-import com.runninghi.runninghibackv2.application.dto.postreport.response.GetPostReportResponse;
-import com.runninghi.runninghibackv2.application.dto.postreport.response.HandlePostReportResponse;
 import com.runninghi.runninghibackv2.domain.entity.PostReport;
 import com.runninghi.runninghibackv2.domain.repository.MemberRepository;
 import com.runninghi.runninghibackv2.domain.repository.PostReportRepository;
@@ -16,11 +15,15 @@ import com.runninghi.runninghibackv2.domain.service.PostReportChecker;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static com.runninghi.runninghibackv2.domain.entity.QImage.image;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +33,7 @@ public class PostReportService {
     private final MemberRepository memberRepository;
     private final PostRepository postRepository;
     private final PostReportChecker postReportChecker;
+    private final JPAQueryFactory jpaQueryFactory;
 
     // 게시글 신고 저장
     @Transactional
@@ -58,11 +62,15 @@ public class PostReportService {
 
     // 게시글 신고 전체 조회
     @Transactional(readOnly = true)
-    public List<GetPostReportResponse> getPostReports() {
+    public Page<GetAllPostReportsResponse> getPostReports(Pageable pageable) {
 
-        return postReportRepository.findAll().stream()
-                .map(GetPostReportResponse::from)
-                .toList();
+        Page<PostReport> postReports = postReportRepository.findAll(pageable);
+
+        List<GetAllPostReportsResponse> responses = postReports.stream()
+                .map(GetAllPostReportsResponse::from)
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(responses, pageable, postReports.getTotalElements());
     }
 
     // 게시글 신고 상세 조회
@@ -72,7 +80,13 @@ public class PostReportService {
         PostReport postReport = postReportRepository.findById(postReportNo)
                 .orElseThrow(EntityNotFoundException::new);
 
-        return GetPostReportResponse.from(postReport);
+        Image mainImage = jpaQueryFactory.select(image)
+                .from(image)
+                .where(image.postNo.in(postReport.getReportedPost().getPostNo()))
+                .limit(1)
+                .fetchOne();
+
+        return GetPostReportResponse.from(postReport, mainImage != null ? mainImage.getImageUrl() : null);
     }
 
     // 신고 처리 상태로 신고된 게시글 조회
@@ -84,12 +98,15 @@ public class PostReportService {
 
     // 신고된 게시글의 모든 신고 내역 조회
     @Transactional(readOnly = true)
-    public Page<GetPostReportResponse> getPostReportScrollByPostId(Long postNo, Pageable pageable) {
+    public List<GetAllPostReportsResponse> getPostReportScrollByPostId(Long postNo) {
+        Post reportedPost = postRepository.findById(postNo)
+                .orElseThrow(() -> new EntityNotFoundException("Post not found with id: " + postNo));
 
-        Post reportedPost = postRepository.findById(postNo).orElseThrow(EntityNotFoundException::new);
+        List<PostReport> postReports = postReportRepository.findAllByReportedPost(reportedPost);
 
-        return postReportRepository.findAllByReportedPost(reportedPost, pageable)
-                .map(GetPostReportResponse::from);
+        return postReports.stream()
+                .map(GetAllPostReportsResponse::from)
+                .collect(Collectors.toList());
     }
 
     // 게시글 신고 수락/거절 처리
